--- a/dockerfiles/develop-env/ubuntu/23.10/Dockerfile
+++ b/dockerfiles/develop-env/ubuntu/23.10/Dockerfile
@@ -9,6 +9,9 @@ ENV container docker
 STOPSIGNAL SIGRTMIN+3
 VOLUME [ "/tmp", "/run", "/run/lock" ]
 
+# 切换脚本解释器为bash, Ubuntu默认的脚本解释器为dash
+RUN chsh -s /bin/bash
+
 # 移除无用的服务
 RUN rm -f /lib/systemd/system/multi-user.target.wants/* \
   /etc/systemd/system/*.wants/* \
@@ -29,15 +32,28 @@ deb http://cn.archive.ubuntu.com/ubuntu mantic-security main restricted\n\
 deb http://cn.archive.ubuntu.com/ubuntu mantic-security universe\n\
 deb http://cn.archive.ubuntu.com/ubuntu mantic-security multiverse' > /etc/apt/sources.list
 
-# 不知道为什么，这个必须写在这里，否则文件中的内容不会换行，不知道是不是因为把dash改为bash的原因
 # 容器启动后执行：timedatectl set-timezone "Asia/Shanghai" 命令，设置时区为中国
-RUN echo '[Unit]\n\
-Description=sync time\n\
-After=chrony.service\n\
-[Service]\n\
-ExecStart=timedatectl set-timezone "Asia/Shanghai"\n\
-[Install]\n\
-WantedBy=multi-user.target' > /etc/systemd/system/sync-time.service
+# echo写法太繁琐，建议使用cat写法
+# RUN echo '[Unit]\n\
+# Description=sync time\n\
+# After=chrony.service\n\
+# [Service]\n\
+# ExecStart=timedatectl set-timezone "Asia/Shanghai"\n\
+# [Install]\n\
+# WantedBy=multi-user.target' > /etc/systemd/system/sync-time.service
+
+# 强烈推荐使用cat写法书写多行写入文件，直观易读，容易维护
+RUN cat <<EOF > /etc/systemd/system/sync-time.service
+[Unit]
+Description=sync time
+After=chrony.service
+
+[Service]
+ExecStart=timedatectl set-timezone "Asia/Shanghai"
+
+[Install]
+WantedBy=multi-user.target
+EOF
 
 RUN apt update -y && apt upgrade -y
 RUN DEBIAN_FRONTEND=noninteractive TZ=Asia/Shanghai apt -y install tzdata
@@ -57,9 +73,6 @@ RUN sed -i 's/#Port 22/Port 22/g' /etc/ssh/sshd_config && \
     sed -i 's/#ListenAddress 0.0.0.0/ListenAddress 0.0.0.0/g' /etc/ssh/sshd_config && \
     sed -i 's/#PermitRootLogin yes/PermitRootLogin yes/g' /etc/ssh/sshd_config && \
     sed -i "s/UsePAM.*/UsePAM no/g" /etc/ssh/sshd_config
-
-# 切换脚本解释器为bash, Ubuntu默认的脚本解释器为dash
-RUN ln -fs /bin/bash /bin/sh
 
 # golang环境 https://go.dev/doc/install  多版本管理 https://blog.csdn.net/weixin_41910261/article/details/112969035
 # 如果dl.google.com解析不了，需要添加dns解析，那么可以使用如下命令：docker build --add-host=dl.google.com:58.63.233.97  --progress=plain .
@@ -382,17 +395,20 @@ RUN V=4.8.2 && priority=4 && mkdir /usr/local/gcc-v$V && \
 # shell命令行颜色提示; git分支名自动补全
 # 设置shell提示符颜色 参考链接：https://www.jianshu.com/p/a1d698d1f7c8
 RUN V=$(git -v|awk '{print $3}') && git clone -b v${V} https://github.com/git/git.git && \
-    cp git/contrib/completion/git-completion.bash ~/.git-completion.bash && echo 'source ~/.git-completion.bash' >> ~/.profile  && \
+    cp git/contrib/completion/git-completion.bash ~/.git-completion.bash && echo 'source ~/.git-completion.bash' >> ~/.bashrc  && \
     cp git/contrib/completion/git-prompt.sh ~/.git-prompt.sh && rm -rf git && \
-    echo 'GIT_PS1_SHOWDIRTYSTATE=true\n\
-GIT_PS1_SHOWCOLORHINTS=true\n\
-GIT_PS1_SHOWSTASHSTATE=true\n\
-GIT_PS1_SHOWUNTRACKEDFILES=true\n\
-#GIT_PS1_SHOWUPSTREAM=auto\n\
-if [ -f ~/.git-completion.bash ]; then\n\
-  source ~/.git-prompt.sh\n\
-  PROMPT_COMMAND=`__git_ps1 "\[\e[37m\][\[\e[32m\]\u\[\e[37m\]@\[\e[35m\]\h\[\e[0m\] \[\e[36m\]\w\[\e[0m\]]" "\\\$ "`\n\
-fi' >> ~/.profile
+    cat <<EOF >> ~/.bashrc
+
+GIT_PS1_SHOWDIRTYSTATE=true
+GIT_PS1_SHOWCOLORHINTS=true
+GIT_PS1_SHOWSTASHSTATE=true
+GIT_PS1_SHOWUNTRACKEDFILES=true
+#GIT_PS1_SHOWUPSTREAM=auto
+if [ -f ~/.git-completion.bash ]; then
+  source ~/.git-prompt.sh
+  PROMPT_COMMAND='__git_ps1 "\[\e[37m\][\[\e[32m\]\u\[\e[37m\]@\[\e[35m\]\h\[\e[0m\] \[\e[36m\]\w\[\e[0m\]]" "\\\$ "'
+fi
+EOF
 
 RUN AA
 
@@ -401,8 +417,14 @@ RUN touch /etc/sysctl.conf && \
     echo "fs.inotify.max_user_watches = 9994288" > /etc/sysctl.conf
 
 # vscode 不然vscode安装好之后，老是找不到命令
-RUN echo "code_latest_version=\$(ls -tral -1 --ignore=.* ~/.vscode-server/bin | sed -n '2p' | rev | cut -d' ' -f1 | rev)\n\
-    export PATH=\${HOME}/.vscode-server/bin/\${code_latest_version}/bin/remote-cli:\$PATH" >> ~/.profile 
+RUN cat <<EOF >> ~/.bashrc
+
+# 添加vscode可执行文件环境变量配置，否则有可能找不到vscode可执行文件
+if [ -d ~/.vscode-server ];then
+    code_latest_version=\$(ls -tral -1 --ignore=.* ~/.vscode-server/bin | sed -n '2p' | rev | cut -d' ' -f1 | rev)
+    export PATH=\${HOME}/.vscode-server/bin/\${code_latest_version}/bin/remote-cli:\$PATH
+fi
+EOF
 
 
 # TODO 解决启动时需要输入命令的问题，systemd应该直接启动
